manifests/feat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temp-nuxtjs-${IMAGE_TAG}
  namespace: architecture-review
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temp-nuxtjs-${IMAGE_TAG}
  template:
    metadata:
      labels:
        app: temp-nuxtjs-${IMAGE_TAG}
    spec:
      nodeSelector:
        agentpool: user
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: "kubernetes.io/hostname"
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: temp-nuxtjs-${IMAGE_TAG}
      containers:
      - name: temp-nuxtjs-${IMAGE_TAG}
        image: aksarchitect.azurecr.io/frontend:${IMAGE_TAG}
        imagePullPolicy: Always # <== feat specific
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 0.5
            memory: 512Mi
          requests:
            cpu:  0.25
            memory: 256Mi

# example `IMAGE_TAG` feat-repsonsive
